<resources>
    <string name="app_name">Clowix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">image_description</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_Up">sign up</string>
    <string name="internetOff">NO</string>
    <string name="connection">Internet Connection</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="invalid_email">Email Does Not Exist</string>
    <string name="email_already">Email Already Exists</string>
    <string name="save">Account Created</string>
    <string name="file">Files</string>
    <string name="data_name">my name is khan.mp3</string>
    <string name="data_information">12.30 mb</string>
    <string name="date_information">25-12-2020</string>
    <string name="recent_info">No Recent Activity</string>
    <string name="photo_info">No Photo Uploaded</string>
    <string name="account">Account Details</string>
    <string name="email">Email ID</string>
    <string name="id">anilr098421@gmail.com</string>
    <string name="usage">Usage</string>
    <string name="usage_detail">12.30 GB free of 5 GB</string>
    <string name="sign_out">Sign Out</string>
    <string name="data_delete">Data Deleted</string>
    <string name="unable_to_delete">Unable To Delete</string>
    <string name="uploaded">Data Uploaded</string>
    <string name="unable_to_upload">Unable To Upload</string>
    <string name="permission">Permission Granted</string>
    <string name="download">Downloaded</string>
    <string name="unable_to_download">Unable To Download</string>
    <string name="status">Downloading 12%</string>
    <string name="percentage">%</string>
    <string name="downloader">\"Downloading \"</string>
    <string name="spacing">\t\t</string>
    <string name="uploading">Uploading 12%</string>
    <string name="name">file_name</string>
    <string name="rename">Done</string>
    <string name="unable_to_rename">Unable To Rename</string>
    <string name="warning">"Minimize page while listening music or video cause run in background. To avoid this stop it before minimize or leaving page or open that file again to stop "</string>
    <string name="data_status">No File Found</string>
    <string name="intial">Initial Space 2.56 GB</string>
    <string name="offer">You can upgrade your space with our prime package. Click to unlock</string>
    <string name="share_info">No File Shared</string>
    <string name="emailinfo">Reset Password</string>
    <string name="password_hint">Enter Email ID</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="userinfo">Data Not Found</string>
</resources>