<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"

        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/Password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/forgot_password"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/signinbackground"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>