<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="false"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/deletepopupbackground">

            <TextView
                android:id="@+id/initial_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/initial_space"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/set_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/id"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/set_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/usage"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_alignStart="@+id/initial_space"
                android:layout_alignEnd="@+id/initial_space"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/set_usage_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/usage_detail"
                android:textSize="18sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/set_usage_status"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/logo"
                android:focusable="true"
                app:backgroundTint="@color/white"
                app:elevation="30dp"
                app:srcCompat="@drawable/sign_out" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/done_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/user" />

        <ImageView
            android:id="@+id/minimize"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cancel" />

    </RelativeLayout>
</RelativeLayout>