<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="false"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/deletepopupbackground">

            <EditText
                android:id="@+id/initial_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="text"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/done_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/edit3" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rename_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:clickable="true"
            android:contentDescription="@string/logo"
            android:focusable="true"
            app:backgroundTint="@color/white"
            app:srcCompat="@drawable/save" />

    </RelativeLayout>
</RelativeLayout>