<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="false"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/testing">

            <TextView
                android:id="@+id/initial_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/emailinfo"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/initial_space"
                android:hint="@string/enter_email_id"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/black">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enter_user_email"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/logo"
                android:focusable="true"
                app:backgroundTint="@color/black"
                app:elevation="30dp"
                app:srcCompat="@drawable/confirm" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/done_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/reset_password" />

    </RelativeLayout>
</RelativeLayout>