<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/datashowcorners">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="5dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/logo"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/demo" />

                    <FrameLayout
                        android:id="@+id/fragment_layout"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/imageView3"
                        android:layout_alignBottom="@+id/imageView3"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/imageView3">

                        <ImageView
                            android:id="@+id/vedio_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/logo"
                            android:scaleType="centerCrop" />
                    </FrameLayout>

                    <ImageView
                        android:id="@+id/image_shower"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/imageView3"
                        android:layout_alignBottom="@+id/imageView3"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/imageView3"
                        android:contentDescription="@string/logo"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/data_name"
                        android:layout_width="match_parent"
                        android:layout_height="26sp"
                        android:layout_alignTop="@+id/fragment_layout"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="30dp"
                        android:layout_toEndOf="@id/fragment_layout"
                        android:text="@string/data_name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/data_information"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@id/data_name"
                        android:layout_alignStart="@+id/data_name"
                        android:layout_alignBottom="@+id/fragment_layout"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/data_information"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/date_information"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/data_information"
                        android:layout_alignEnd="@+id/data_name"
                        android:layout_alignBottom="@+id/data_information"
                        android:layout_toEndOf="@id/data_information"
                        android:paddingStart="10dp"
                        android:paddingEnd="1dp"
                        android:text="@string/date_information"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/sider_click"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/data_name"
                        android:layout_alignBottom="@+id/data_information"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="1dp"
                        android:contentDescription="@string/logo"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/dot1" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>